--- a/resources/views/sections/navigation.twig
+++ b/resources/views/sections/navigation.twig
@@ -1,9 +1,9 @@
 <ul class="nav flex-column">
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-secondary btn-block m-2">submit expense</button>
+        <button type="button" class="btn btn-outline-secondary btn-block m-2"><a href="/expense">submit expense</a></button>
     </li>
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-secondary btn-block m-2">calculate fairShare</button>
+        <button type="button" class="btn btn-outline-secondary btn-block m-2"><a href="/calc-1">calculate fairShare</a></button>
     </li>
     <li class="nav-item">
         <button type="button" class="btn btn-outline-secondary btn-block m-2">view statistics</button>
