--- a/resources/views/layouts/master.twig
+++ b/resources/views/layouts/master.twig
@@ -8,7 +8,9 @@
 <div class="container pt-5">
     <div class="row">
         <div class="col-12">
-            <h1>This is the title</h1>
+            {% block headline %}
+
+            {% endblock %}
             <hr>
         </div>
     </div>
@@ -25,7 +27,7 @@
 </div>
 
 {{ include ('sections/footer.twig') }}
-
+{% block javascript %}{% endblock %}
 
 </body>
 </html>
