--- a/resources/views/pages/expense.twig
+++ b/resources/views/pages/expense.twig
@@ -1,5 +1,50 @@
 {% extends "/layouts/master.twig" %}
 
-{% block content %}
-    <h1>this is the content for the expense page</h1>
+
+
+{% block headline %}
+    <h1>Submit your expense</h1>
 {% endblock %}
+
+{% block content %}
+    <form method="post" action="/expense/save">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Select user</label>
+            <select name="user" class="form-control">
+
+                {% for user in users %}
+
+                    <option value="{{ user.id }}">{{ user.name }}</option>
+
+                {% endfor %}
+
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Select expense date</label>
+        <input name="date" class="form-control datepicker">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Select shop</label>
+            <input name="shop" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">How much did you spend</label>
+            <input name="amount" class="form-control">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+{% endblock %}
+
+{% block javascript %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
+
+    <script>
+        $('.datepicker').datepicker({
+            daysOfWeekDisabled: "1,2",
+            todayHighlight: true
+        });
+    </script>
+    {% endblock %}
