minor updates to template views

--- a/resources/views/pages/dashboard.twig
+++ b/resources/views/pages/dashboard.twig
@@ -1,5 +1,21 @@
 {% extends "/layouts/master.twig" %}
 
+{% block headline %}
+    <div class="card">
+        <div class="card-header">
+            <h2>Hello and welcome to fairShare V. 01</h2>
+        </div>
+    </div>
+{% endblock %}
+
+
 {% block content %}
-foo {{ name }}
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">It's just a prototype</h5>
+            <p class="card-text">This means that probably not everything works as smooth as you may expect.
+                Nevertheless, stay calm and enjoy the ride.</p>
+            <p>Thanks, <br>Jan</p>
+        </div>
+    </div>
 {% endblock %}
