--- a/resources/views/sections/navigation.twig
+++ b/resources/views/sections/navigation.twig
@@ -1,14 +1,14 @@
 <ul class="nav flex-column">
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-secondary btn-block m-2"><a href="/expense">submit expense</a></button>
+        <button type="button" class="btn btn-outline-secondary btn-block mb-2"><a href="/expense">Submit expense</a></button>
     </li>
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-secondary btn-block m-2"><a href="/calc-1">calculate fairShare</a></button>
+        <button type="button" class="btn btn-outline-secondary btn-block mb-2 mt-2"><a href="/calc-1">Calculate fairShare</a></button>
     </li>
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-secondary btn-block m-2">view statistics</button>
+        <button type="button" class="btn btn-outline-secondary btn-block mb-2 mt-2"><a href="/">View statistics</a></button>
     </li>
     <li class="nav-item">
-        <button type="button" class="btn btn-outline-secondary btn-block m-2">register user</button>
+        <button type="button" class="btn btn-outline-secondary btn-block mb-2 mt-2"><a href="/user">Register user</a></button>
     </li>
 </ul>
