--- a/resources/views/pages/user.twig
+++ b/resources/views/pages/user.twig
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label for="InputEmail">Your password</label>
-            <input name="password" class="form-control" required>
+            <input type="password" name="password" class="form-control" required>
         </div>
 
         <button type="register user" class="btn btn-success">Get up and running</button>
