--- a/resources/views/pages/calc-4.twig
+++ b/resources/views/pages/calc-4.twig
@@ -3,7 +3,7 @@
 {% block headline %}
     <div class="card">
         <div class="card-header">
-            <h2>fairShare payment result</h2>
+            <h2>FairShare result</h2>
             <div class="text-muted">Calculate fairShare: Step 4/4</div>
         </div>
     </div>
@@ -12,23 +12,6 @@
 
 {% block content %}
 
-    <form method="post" action="/calc-3">
-        <div class="form-group">
-            <label>Select time frame for your calculation</label>
-            <select multiple class="form-control" size="10" id="UserGroup">
 
-                {% for user in users %}
-
-                    <option value="{{ user.id }}">{{ user.name }}</option>
-
-                {% endfor %}
-
-            </select>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-success">Submit your user group</button>
-        </div>
-
-    </form>
 
 {% endblock %}
