--- a/resources/views/pages/dashboard.twig
+++ b/resources/views/pages/dashboard.twig
@@ -3,7 +3,7 @@
 {% block headline %}
     <div class="card">
         <div class="card-header">
-            <h2>Hello and welcome to fairShare V. 01</h2>
+            <h2>Hello and welcome to fairShare</h2>
         </div>
     </div>
 {% endblock %}
