--- a/resources/views/sections/footer.twig
+++ b/resources/views/sections/footer.twig
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-12">
                 <hr>
-                <p>Here is place for a fancy footer. Yeah.</p>
+                <p>Here is place for a footer. A fancy footer. Yeah.</p>
             </div>
         </div>
     </div>
