--- a/resources/views/pages/calc-2.twig
+++ b/resources/views/pages/calc-2.twig
@@ -34,6 +34,9 @@
 
     <script>
         $('.input-daterange input').each(function () {
+            $(this).datepicker({
+                format: "yyyy-mm-dd"
+            });
             $(this).datepicker('clearDates');
         });
     </script>
